I messed up first time, modified corevtly now i hope

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/pasta.html">Pasta with Chicken and Broccoli</a></li>
-        <li><a href="recipes/pasta.html">Spicy Tuna Mayo Onigiri</a></li>
+        <li><a href="recipes/onigiri.html">Spicy Tuna Mayo Onigiri</a></li>
     </ul>
 </body>
 </html>
